added possibility to start/restart game